--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -73,6 +73,67 @@ menu {
 
 }
 
+// MAIN
+
+main{
+    color: white;
+
+    .section-jumbotron{
+        height: 400px;
+        img{
+            height: 100%;
+            width: 100%;
+            aspect-ratio: 1/1;
+            object-fit: cover;
+            object-position: top;
+        }
+    }
+
+    .section-content {
+        background-color: $black;
+        padding: 54px 0;
+
+        .card-list{
+            display: grid;
+            grid-template-columns: repeat(6, 1fr);
+            gap: 30px;
+            row-gap: 50px;
+        }
+
+        .style-target-button{
+            background-color: $blue;
+            width: max-content;
+            text-transform: uppercase;
+        }
+
+        .target{
+            position: relative;
+            bottom: 85px;
+            padding: 15px 30px;
+        }
+
+        .button{
+            margin: 0 auto;
+            padding: 10px 60px;
+            margin-top: 50px;
+            font-weight: bold;
+        }
+    }
+
+    .section-content-buy {
+        background-color: $blue;
+        padding: 50px 0;
+
+        .list-buy{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+    }
+
+}
+
 // FOOTER
 
 footer {
